# fastapi-profile

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
fastapi_profile/: __init__.py  config.py  custom_route.py  databases.py  factory.py  logger.py  models.py  route.py  router.py  schemas.py
tests/: test_everything.py  test_package.py
