[tool.poetry]
name = "fastapi-profile"
version = "0.1.0"
description = ""
authors = ["Marcelo Trylesinski <marcelotryle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.6.4"
darglint = "^1.5.5"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
